WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308116
REGRESSION(
302416@main
) Adjust Quirks for hotels.com to remove the flickering
https://bugs.webkit.org/show_bug.cgi?id=308116
Summary
REGRESSION(302416@main) Adjust Quirks for hotels.com to remove the flickering
Karl Dubost
Reported
2026-02-18 00:27:48 PST
Previously in
Bug 286995
, a quirk was added to remove flickering on hotels.com, this is not working anymore. Something has changed. The quirks needs to be adjusted.
Attachments
Add attachment
proposed patch, testcase, etc.
Karl Dubost
Comment 1
2026-02-18 00:55:26 PST
<
rdar://170331800
>
Karl Dubost
Comment 2
2026-02-18 01:44:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58913
Antoine Quint
Comment 3
2026-02-18 08:54:42 PST
Some history: -
289777@main
(fix for
bug 286995
) was when the original quirk landed, which correctly applied the animations but had a slight flash at the beginning. -
300237@main
(fix for
bug 298838
) by Sam Weinig was when the flash was removed and hotels.com was in the best state in Safari, matching Chrome’s behavior. -
302416@main
(fix for
bug 301581
) also by Sam Weinig was when things regressed to the current state :( Perhaps the code added in
289777@main
was no longer optimal with how the style system works with animations anymore, or perhaps it's actually a bad regression we must fix. I think we need to understand what’s wrong with the original Quirks code before making a change and engage with Sam Weinig, the author of
302416@main
, to get to the bottom of this. I've Cc'd him to this bug and left a comment on
bug 301581
.
Karl Dubost
Comment 4
2026-02-24 01:19:39 PST
The steps to reproduce are missing 1. Launch Safari 2. Navigate to hotels.com 3. In the top left corner of the website, tap “shop travel” Results: It should not flicker. It does flicker again.
EWS
Comment 5
2026-03-04 21:05:16 PST
Committed
308678@main
(381ad0cbb2cd): <
https://commits.webkit.org/308678@main
> Reviewed commits have been landed. Closing PR #58913 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug