Cherry-pick 381ad0cbb2cd. rdar://172129911

Adjust Quirks for hotels.com to remove the flickering
    https://bugs.webkit.org/show_bug.cgi?id=308116
    rdar://170331800

    Reviewed by Brandon Stewart, Antoine Quint, and Sam Weinig.

    The previous quirk stopped working, but the markup and CSS do not seem
    to have changed at all. This is another strategy to make it work. The
    flickering doesn't happen.

    * LayoutTests/fast/css/hotels-animation-quirk.html: Added
      Test for making sure any future changes will not break this quirk.

    * LayoutTests/fast/css/hotels-animation-quirk-expected.txt: Added.
    * Source/WebCore/page/Quirks.cpp:
    (WebCore::Quirks::needsHotelsAnimationQuirk const):
    * Source/WebCore/style/StyleAdjuster.cpp:
    (WebCore::Style::Adjuster::adjustForSiteSpecificQuirks const):

    Canonical link: https://commits.webkit.org/308678@main

Identifier: 305413.425@safari-7624-branch